--- a/src/styles/blocks/contacts.scss
+++ b/src/styles/blocks/contacts.scss
@@ -2,15 +2,19 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 95%;
+  width: 100%;
   padding: 50px 0 0;
   box-sizing: border-box;
 
   @media (min-width: 768px) {
-    width: max-content;
+    width: 75%;
     flex-direction: row;
     justify-content: flex-start;
     align-items: flex-start;
+  }
+
+  @media (min-width: 1280px) {
+    width: max-content;
   }
 
   &__logo-socials {
@@ -22,12 +26,13 @@
     @media (min-width: 768px) {
       flex-direction: column;
       justify-content: flex-start;
-      width: 19%;
+      width: 20%;
       margin-top: 50px;
     }
   }
 
   &__socials {
+    align-self: flex-start;
     width: 60px;
     display: flex;
     justify-content: space-between;
@@ -35,6 +40,7 @@
 
     @media (min-width: 768px) {
       margin-top: 82px;
+      margin-left: 25px;
     }
   }
 
@@ -48,6 +54,7 @@
     justify-content: space-between;
     width: 95%;
     margin-top: 40px;
+    
     font-family: "IBM Plex Sans", sans-serif;
     font-weight: 600;
     font-size: 14px;
@@ -55,8 +62,7 @@
     color: #0f0e08;
 
     @media (min-width: 768px) {
-      width: 70%;
-      justify-content: flex-start;
+      margin-left: 50px;
     }
   }
 
@@ -64,11 +70,14 @@
     width: 130px;
 
     @media (min-width: 768px) {
-      margin-right: 80px;
+      margin-right: 130px;
+      margin-left: 30px;
+      width: 230px;
     }
   }
 
   &__phones {
     width: 130px;
+    margin-left: 20px;
   }
 }
