--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -1,20 +1,19 @@
 .footer {
   position: relative;
-  width: 95%;
+  width: 100%;
   max-width: 100vw;
   box-sizing: border-box;
-  //overflow: hidden;
+
   height: 380px;
   font-family: "IBM Plex Sans", sans-serif;
   font-size: 14px;
   color: #0f0e08;
 
   &__contacts {
-    //margin: 50px 20px 0;
+    margin: 0 auto;
 
     @media (min-width: 768px) {
-      margin: 51px 35px 0 55px;
-      height: 689px;
+      margin: 51px 0 55px;
     }
 
     @media (min-width: 1280px) {
@@ -26,7 +25,8 @@
   &__up-link {
     display: flex;
     justify-content: flex-end;
-    width: 100%;
+    width: 95%;
+    margin: 0 auto;
   }
 
   &__arrow-wrapper {
@@ -49,13 +49,13 @@
 
   &__up-arrow {
     margin: 20% auto;
-    width: 100%;
+    width: 99%;
     height: 50%;
   }
 
   &__line {
-    margin: 20px 20px 40px;
-    width: 100%;
+    margin: 20px auto 40px;
+    width: 95%;
     height: 1px;
     border-bottom: 1px solid rgba(26, 90, 76, 0.5);
 
@@ -77,11 +77,13 @@
   }
 
   &__links {
-    margin: 0 20px;
+    margin: 0;
+    padding: 0 40px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 50%;
+    width: 100%;
+    overflow: hidden;
 
     @media (min-width: 768px) {
       margin: 46px 194px 51px;
@@ -92,7 +94,7 @@
   &__right-links {
     display: flex;
     flex-direction: column;
-    width: 30%;
+    width: 45%;
     height: 120px;
     justify-content: space-between;
     align-items: flex-start;
@@ -122,24 +124,24 @@
   &__left-links {
     display: flex;
     flex-direction: column;
-    width: 30%;
+    width: 45%;
     height: 120px;
     justify-content: space-between;
     align-items: flex-start;
     text-align: left;
 
     @media (min-width: 768px) {
-      //margin-right: 25px;
     }
 
     @media (min-width: 1280px) {
       position: absolute;
+      align-items: flex-start;
       width: 10%;
       padding: 0;
       margin: 0;
       bottom: -430px;
       right: -200px;
-      transform: translateX(-100%) ;
+      transform: translateX(-150%) ;
     }
 
     @media (min-width: 1920px) {
@@ -149,8 +151,10 @@
     }
   }
 
-  &__link {
+   &__link {
     text-decoration: none;
+    color: #0f0e08;
+    ;
   }
 
   &__bottom {
