--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,6 @@
-$c-gray: #eee;
+$colorBlack: #000;
+$colorTitleAndFooter: #0f0e08;
+$colorText: #4e4e4e;
+$colorGray: #687480;
+$colorForDate: #1a5a4c;
+$colorBackground: #e5e5e5;
