--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,5 +1,8 @@
 .page {
+  box-sizing: border-box;
   font-family: "Montserrat", "IBM Plex Sans", sans-serif;
+  background-color: $colorBackground;
+  scroll-behavior: smooth;
 
   &__body {
     margin: 0;
