--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -6,13 +6,11 @@
   }
 
   &__title {
-    margin: 0;
+    margin: 0 0 40px;
     font-weight: bold;
     font-size: 36px;
     line-height: 100%;
     text-align: center;
-    margin-bottom: 40px;
-    padding: 0 60px;
   }
 
   &__img {
@@ -52,8 +50,10 @@
   }
 
   &__text {
+    margin: 0;
     font-weight: 300;
     font-size: 16px;
     color: $colorText;
+    margin-bottom: 60px;
   }
 }
