--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,18 +1,81 @@
 .header {
   box-sizing: border-box;
-  height: 655px;
-  background-size: cover;
-  background-position: center;
-  background-image: url(../images/Natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv-10-1800x1200.svg);
+
+  &__img-conteiner {
+    position: relative;
+    margin-bottom: 20px;
+  }
+
+  &__logo {
+    top: 0;
+    width: 100vh;
+    object-position: center;
+  }
+
+  &__logo-small {
+    position: absolute;
+    top: 10px;
+    left: 50%;
+    transform: translate(-50%);
+    text-decoration: none;
+    color: $colorTitleAndFooter;
+    font-weight: bold;
+    font-size: 30px;
+    line-height: 100%;
+  }
 
   &__menu-opener {
+    position: absolute;
+    top: 33px;
+    left: 23px;
     display: block;
     height: 12px;
     width: 18px;
+  }
 
-    background-image: url();
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+  &__title {
+    margin: 0 auto 20px;
+    font-weight: bold;
+    font-size: 45px;
+    line-height: 100%;
+    text-align: center;
+    color: $colorBlack;
+  }
+
+  &__button-container {
+    display: flex;
+    justify-content: center;
+    text-decoration: none;
+    margin-bottom: 70px;
+  }
+
+  &__button-big {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 230px;
+    height: 50px;
+    border: 1px solid $colorForDate;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 100%;
+    color: $colorTitleAndFooter;
+  }
+
+  &__button-small {
+    position: relative;
+    height: 50px;
+    width: 50px;
+    background-color: $colorForDate;
+  }
+
+  &__for-button {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 12px;
+    width: 10px;
+    color: $colorForSmallButton;
   }
 }
