--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -7,6 +7,8 @@
 
   &__title {
     margin: 0 0 40px;
+
+    @include firstText;
     font-weight: bold;
     font-size: 36px;
     line-height: 100%;
@@ -27,6 +29,7 @@
   }
 
   &__name {
+    @include secondaryText;
     font-weight: 500;
     font-size: 16px;
     line-height: 100%;
@@ -34,6 +37,7 @@
   }
 
   &__date {
+    @include secondaryText;
     font-weight: bold;
     font-size: 16px;
     line-height: 150%;
@@ -42,7 +46,7 @@
 
   &__title-text {
     margin: 0;
-    font-weight: normal;
+    font-weight: 400;
     font-size: 28px;
     line-height: 100%;
     color: $colorTitleAndFooter;
@@ -51,6 +55,8 @@
 
   &__text {
     margin: 0;
+
+    @include secondaryText;
     font-weight: 300;
     font-size: 16px;
     color: $colorText;
