--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -1,7 +1,10 @@
 .gallery {
   padding: 0 20px;
+
   &__title {
     margin: 0;
+
+    @include firstText;
     font-weight: bold;
     font-size: 36px;
     line-height: 100%;
