--- a/src/styles/blocks/lecture.scss
+++ b/src/styles/blocks/lecture.scss
@@ -17,6 +17,7 @@
     width: 278px;
     height: 154px;
     background-color: #fff;
+    box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
   }
 
   &__date-conteiner {
@@ -27,12 +28,14 @@
   }
 
   &__name {
+    @include secondaryText;
     font-weight: 500;
     font-size: 16px;
     color: $colorGray;
   }
 
   &__date {
+    @include secondaryText;
     font-weight: bold;
     font-size: 16px;
     line-height: 150%;
@@ -41,6 +44,8 @@
 
   &__title-text {
     margin: 0 20px 34px;
+
+    @include firstText;
     font-weight: normal;
     font-size: 28px;
     line-height: 100%;
