--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -1,5 +1,31 @@
-@mixin onDesktop {
-  @media (min-width: 1280px) {
+@mixin onTablet {
+  @media (max-width: 768px) {
     @content;
   }
+}
+
+@mixin onDesktop {
+  @media (max-width: 1280px) {
+    @content;
+  }
+}
+
+@mixin onDesktopBig {
+  @media (max-width: 1440px) {
+    @content;
+  }
+}
+
+@mixin onDesktopVeryBig {
+  @media (max-width: 1920px) {
+    @content;
+  }
+}
+
+@mixin firstText {
+  font-family: "Montserrat", sans-serif;
+}
+
+@mixin secondaryText {
+  font-family: "IBM Plex Sans", sans-serif;
 }
