80% solution for 1280px

--- a/src/styles/blocks/description.scss
+++ b/src/styles/blocks/description.scss
@@ -1,5 +1,6 @@
 .description {
   &__container {
+    position: relative;
     height: fit-content;
     margin-top: 60px;
   }
@@ -19,6 +20,10 @@
     line-height: 150%;
 
     color: #1a5a4c;
+
+    &--last {
+      padding-left: 120px;
+    }
   }
 
   &__name {
@@ -41,10 +46,7 @@
     }
 
     &--last {
-      font-size: 36px;
-      line-height: 100%;
-      color: #0f0e08;
-
+      margin: 16px 0 0;
       &::after {
         display: none;
       }
@@ -56,5 +58,14 @@
     font-size: 16px;
     line-height: 150%;
     color: #4e4e4e;
+  }
+
+  &__block {
+    height: fit-content;
+    padding: 45px 100px 50px;
+    border: 1px solid transparent;
+    background-color: #fff;
+    position: absolute;
+    transform: translateY(-102px);
   }
 }
