--- a/src/styles/blocks/grid.scss
+++ b/src/styles/blocks/grid.scss
@@ -31,4 +31,12 @@
       }
     }
   }
+
+  &__row {
+    @for $row from 1 through 12 {
+      &--#{$row} {
+        grid-row: #{$row};
+      }
+    }
+  }
 }
