--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,40 +1,40 @@
 .header {
+  height: 655px;
+  position: relative;
 
   &__image-container {
-    margin: 0;
-    display: flex;
+    position: absolute;
     right: 0;
     height: 655px;
     width: 725px;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-  }
-
-  &__image {
-    margin: 0;
-    padding: 0;
   }
 
   &__content {
+    height: 655px;
+    width: 100%;
     position: absolute;
-    height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
 
     box-sizing: border-box;
     padding: 8px 0 0;
   }
 
+  &__title-button {
+    position: absolute;
+    transform: translate(36%, 50%);
+    z-index: 1;
+  }
+
   &__title {
+    margin: 0;
+    width: fit-content;
+
     font-family: "Montserrat", sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 45px;
     line-height: 100%;
-
-    text-align: center;
 
     color: #000;
 
@@ -43,5 +43,36 @@
       line-height: 80px;
       letter-spacing: -1.5px;
     }
+
+    &--style {
+      -webkit-text-fill-color: transparent;
+      -webkit-text-stroke-width: 1px;
+      -webkit-text-stroke-color: black;
+    }
+  }
+
+  &__subtitle {
+    position: absolute;
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    align-items: center;
+    top: calc(655px - 140px);
+  }
+
+  &__subtitle-name {
+    height: fit-content;
+    transform: rotate(-90deg);
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 100%;
+    color: #687480;
+  }
+
+  &__subtitle-line {
+    transform: translateX(18px);
+    width: 1px;
+    height: 70px;
+    line-height: 14px;
+    background: #000;
   }
 }
