--- a/src/styles/blocks/place.scss
+++ b/src/styles/blocks/place.scss
@@ -3,18 +3,22 @@
     position: relative;
 
     box-sizing: border-box;
-    width: 100%;
-    max-height: 655px;
+    max-height: 520px;
     overflow: hidden;
 
     @include onDesktop {
-      height: 655px;
+      height: 520px;
       padding-bottom: 0;
     }
 
     &:hover {
       transform: scale(1.05);
     }
+  }
+
+  &__photo-gallery {
+    margin-bottom: 30px;
+    max-height: 600px;
   }
 
   &__photo {
