--- a/src/styles/blocks/top-actions.scss
+++ b/src/styles/blocks/top-actions.scss
@@ -1,6 +1,6 @@
 .top-actions {
   --icon-width: 18px;
-
+  z-index: 1;
   display: grid;
   grid-template-columns: var(--icon-width) 1fr;
   justify-items: center;
