--- a/src/styles/_blocks.scss
+++ b/src/styles/_blocks.scss
@@ -2,13 +2,13 @@
 @import "./blocks/grid";
 @import "./blocks/logo";
 @import "./blocks/icon";
-@import "./blocks/button";
-@import "./blocks/form-field";
 
 @import "./blocks/page";
 @import "./blocks/header";
 @import "./blocks/events";
 @import "./blocks/place";
 @import "./blocks/description";
+@import "./blocks/gallery";
 @import "./blocks/top-actions";
+@import "./blocks/button";
 @import "./blocks/footer";
