--- a/src/styles/_blocks.scss
+++ b/src/styles/_blocks.scss
@@ -11,4 +11,6 @@
 @import "./blocks/gallery";
 @import "./blocks/top-actions";
 @import "./blocks/button";
+@import "./blocks/substriction";
+@import "./blocks/menu";
 @import "./blocks/footer";
