--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -8,29 +8,42 @@
   cursor: pointer;
 
   &__container {
-    margin-top: 80px;
     display: flex;
+    margin-top: 20px;
+    justify-content: center;
+    @include onDesktop {
+      margin-top: 80px;
+    }
   }
   
   &__title {
-    margin: 0;
-    width: 150px;
-    height: 70px;
+    width: 230px;
+    height: 50px;
     font-weight: 500;
     font-size: 16px;
-    line-height: 70px;
+    line-height: 50px;
     text-align: center;
     color: #0f0e08;
+
+    @include onDesktop {
+      width: 150px;
+      height: 70px;
+    }
   }
 
   &__intro {
-    line-height: 70px;
+    line-height: 50px;
     text-align: center;
-
+    width: 50px;
+    height: 50px;
     color: #d7dde3;
-    margin: 0;
     background: #1a5a4c;
-    height: 70px;
-    width: 70px;
+    
+    @include onDesktop {
+      line-height: 70px;
+      text-align: center;
+      height: 70px;
+      width: 70px;
+    }
   }
 }
