--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -1,5 +1,44 @@
 .footer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  position: relative;
+
+  &__content {
+    font-family: "IBM Plex Sans", sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+    color: #0f0e08;
+
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+
+  &__button {
+    margin-bottom: 20px;
+    grid-column: 2;
+    justify-self: end;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+
+    background-color: #fff;
+    border: 1px solid ;
+    box-sizing: border-box;
+  }
+
+  &__hr {
+    margin-bottom: 40px;
+    color: rgba(26, 90, 76, 0.5);
+    width: 200%;
+    border: 1px solid black;
+  }
+  &__menu {
+    grid-column: 1;
+  }
+
+  &__about {
+    justify-self: right;
+  }
+
+  &__rules {
+    text-align: center;
+  }
 }
