--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -13,21 +13,30 @@
   }
 
   &__section {
-    margin-bottom: 64px;
+    margin-bottom: 70px;
 
+    &:last-child {
+      margin-bottom: 40px;
+    }
+    
     @include onDesktop {
       margin-bottom: 200px;
     }
   }
   
   &__section-title {
-    margin: 0 0 60px;
-
+    margin: 0 0 40px;
+    text-align: center;
     font-family: "Montserrat", sans-serif;
     font-weight: bold;
-    font-size: 48px;
+    font-size: 36px;
     line-height: 100%;
-
     color: #0f0e08;
+
+    @include onDesktop {
+      font-size: 48px;
+      line-height: 100%;
+      margin: 0 0 60px;
+    }
   }
 }
