--- a/src/styles/blocks/place.scss
+++ b/src/styles/blocks/place.scss
@@ -1,10 +1,7 @@
 .place {
   &__photo-container {
     position: relative;
-
     box-sizing: border-box;
-    max-height: 520px;
-    overflow: hidden;
 
     @include onDesktop {
       height: 520px;
@@ -22,10 +19,18 @@
   }
 
   &__photo {
-    margin: 0;
-    position: absolute;
 
+    &--hidden {
+      width: 0;
+    }
+    
+    margin: 0 0 15px;
+    width: 280px;
     object-fit: cover;
     object-position: center;
+
+    &--last {
+      margin: 0;
+    }
   }
 }
