--- a/src/styles/blocks/top-actions.scss
+++ b/src/styles/blocks/top-actions.scss
@@ -1,8 +1,17 @@
 .top-actions {
+  height: 300px;
   --icon-width: 18px;
-  z-index: 1;
+  --padding-width: 45px;
+  --logo-height: 56px;
+
   display: grid;
   grid-template-columns: var(--icon-width) 1fr;
+  grid-template-rows: calc(var(--logo-height) + 19px) 1fr;
+
+  @include onDesktop {
+    --padding-width: 58px;
+  }
+  
   justify-items: center;
   align-items: center;
 }
