--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -1,1 +1,1 @@
-@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&family=Montserrat:wght@500;700&family=Ubuntu:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&family=Montserrat:wght@400;500;700&family=Ubuntu:wght@700&display=swap");
