--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,35 +1,27 @@
 .header {
-  height: 655px;
   position: relative;
+  box-sizing: border-box;
 
-  &__image-container {
-    position: absolute;
-    right: 0;
-    height: 655px;
-    width: 725px;
-  }
-
-  &__content {
-    height: 655px;
-    width: 100%;
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-
-    box-sizing: border-box;
-    padding: 8px 0 0;
+  &__background {
+    background-image: url("../images/header/header-mobile.png");
+    background-position: center;
+    background-repeat: no-repeat;
   }
 
   &__title-button {
-    position: absolute;
-    transform: translate(36%, 50%);
-    z-index: 1;
+    text-align: center;
+
+    @include onDesktop {
+      position: absolute;
+      transform: translate(19%, 50%);
+      z-index: 1;
+      text-align: none;
+    }
   }
 
   &__title {
-    margin: 0;
-    width: fit-content;
-
+    text-align: center;
+    padding-top: 20px;
     font-family: "Montserrat", sans-serif;
     font-style: normal;
     font-weight: 700;
@@ -45,18 +37,24 @@
     }
 
     &--style {
-      -webkit-text-fill-color: transparent;
-      -webkit-text-stroke-width: 1px;
-      -webkit-text-stroke-color: black;
+      @include onDesktop {
+        -webkit-text-fill-color: transparent;
+        -webkit-text-stroke-width: 1px;
+        -webkit-text-stroke-color: black;
+      }
     }
   }
 
   &__subtitle {
-    position: absolute;
-    display: grid;
-    grid-template-rows: 1fr 1fr;
-    align-items: center;
-    top: calc(655px - 140px);
+    display: none;
+
+    @include onDesktop {
+      position: absolute;
+      display: grid;
+      grid-template-rows: 1fr 1fr;
+      align-items: center;
+      top: calc(655px - 140px);
+    }
   }
 
   &__subtitle-name {
