--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -11,8 +11,9 @@
     display: flex;
     margin-top: 20px;
     justify-content: center;
+
     @include onDesktop {
-      margin-top: 80px;
+      justify-content: start;
     }
   }
   
@@ -28,6 +29,7 @@
     @include onDesktop {
       width: 150px;
       height: 70px;
+      line-height: 400%;
     }
   }
 
@@ -40,7 +42,7 @@
     background: #1a5a4c;
     
     @include onDesktop {
-      line-height: 70px;
+      line-height: 400%;
       text-align: center;
       height: 70px;
       width: 70px;
