--- a/src/styles/blocks/description.scss
+++ b/src/styles/blocks/description.scss
@@ -86,18 +86,19 @@
   &__block {
     position: absolute;
     top: -65px;
-    left: 13px;
+    left: 27px;
     width: fit-content;
     padding: 25px 11px 34px;
     height: fit-content;
     border: 1px solid transparent;
     background-color: #fff;
+    box-shadow: 0 2px rgba(26, 90, 76, 0.25);
     
     z-index: 1;
 
     @include onDesktop {
       padding: 45px 100px 50px;
-      transform: translateY(-102px);
+      transform: translateX(75px);
     }
   }
 }
