--- a/src/styles/blocks/top-actions.scss
+++ b/src/styles/blocks/top-actions.scss
@@ -1,4 +1,5 @@
 .top-actions {
+  position: sticky;
   height: 300px;
   --icon-width: 18px;
   --padding-width: 45px;
@@ -9,7 +10,10 @@
   grid-template-rows: calc(var(--logo-height) + 19px) 1fr;
 
   @include onDesktop {
+    height: fit-content;
     --padding-width: 58px;
+    grid-template-rows: 1fr;
+    justify-content: center;
   }
   
   justify-items: center;
