--- a/src/styles/blocks/container.scss
+++ b/src/styles/blocks/container.scss
@@ -1,9 +1,17 @@
 .container {
   margin: 0;
-  max-width: 1280px;
+  max-width: 1920px;
   padding: 0 20px;
 
   @include onDesktop {
-    padding: 0 58px;
+    padding: 0 178px;
+  }
+
+  &__absolute {
+    @include onDesktop {
+      padding: 0;
+      margin: 0;
+      max-width: fit-content;
+    }
   }
 }
