--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -2,20 +2,22 @@
   position: relative;
   box-sizing: border-box;
 
+  &__desktop {
+    width: 0;
+
+    @include onDesktop {
+      width: fit-content;
+      height: 655px;
+    }
+  }
+
   &__background {
     background-image: url("../images/header/header-mobile.png");
     background-position: center;
     background-repeat: no-repeat;
-  }
-
-  &__title-button {
-    text-align: center;
 
     @include onDesktop {
-      position: absolute;
-      transform: translate(19%, 50%);
-      z-index: 1;
-      text-align: none;
+      background-image: none;
     }
   }
 
@@ -31,9 +33,9 @@
     color: #000;
 
     @include onDesktop {
-      font-size: 80px;
-      line-height: 80px;
-      letter-spacing: -1.5px;
+      font-weight: bold;
+      font-size: 72px;
+      text-align: left;
     }
 
     &--style {
