--- a/src/styles/blocks/place.scss
+++ b/src/styles/blocks/place.scss
@@ -1,4 +1,5 @@
 .place {
+  
   &__photo-container {
     position: relative;
     box-sizing: border-box;
@@ -29,8 +30,37 @@
     object-fit: cover;
     object-position: center;
 
+    &--main {
+      @include onDesktop {
+        height: 520px;
+        width: 870px;
+      }
+    }
+
+    &--high-resolution {
+      @include onDesktop {
+        width: fit-content;
+        margin: 0;
+      }
+    }
+
     &--last {
       margin: 0;
+    }
+
+    &--last-desktop {
+      @include onDesktop {
+        height: 678px;
+        width: 1920px;
+      }
+    }
+  }
+
+  &__padding {
+    padding: 0 15px;
+
+    @include onDesktop {
+      padding: 0;
     }
   }
 }
