--- a/src/styles/blocks/substriction.scss
+++ b/src/styles/blocks/substriction.scss
@@ -13,6 +13,12 @@
     background-image: url("../images/footer/footer.png");
     background-position: center;
     background-repeat: no-repeat;
+
+    @include onDesktop {
+      background-image: url("../images/footer/footer-1920.jpg");
+      width: 1920px;
+      height: 650px;
+    }
   }
 
   &__title {
@@ -23,6 +29,11 @@
     line-height: 100%;
 
     color: #fff;
+
+    @include onDesktop {
+      margin: 0 auto;
+      font-size: 48px;
+    }
   }
 
   &__content {
@@ -33,11 +44,20 @@
     text-align: center;
 
     color: #fff;
+
+    @include onDesktop {
+      margin: 0;
+      line-height: 100%;
+    }
   }
 
   &__form {
     display: flex;
     flex-direction: row;
+
+    @include onDesktop {
+      display: block;
+    }
   }
 
   &__input {
@@ -57,6 +77,11 @@
 
       color: #687480;
     }
+
+    @include onDesktop {
+      height: 70px;
+      width: 500px;
+    }
   }
 
   &__button {
@@ -66,28 +91,12 @@
     height: 50px;
 
     background: #f14a27;
-  }
+    cursor: pointer;
 
-  &__links {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-
-    &--icon {
-      display: flex;
-      flex-direction: row;
-      justify-content: center;
-    }
-  }
-
-  &__icon {
-    margin-right: 24px;
-    height: 24px;
-    width: 100%;
-    
-    &:nth-child(2n) {
-      margin: 0;
+    @include onDesktop {
+      margin-left: 30px;
+      width: 70px;
+      height: 72px;
     }
   }
 }
