--- a/src/styles/blocks/container.scss
+++ b/src/styles/blocks/container.scss
@@ -7,6 +7,10 @@
     padding: 0 178px;
   }
 
+  &__mobile {
+    padding: 20px;
+  }
+
   &__absolute {
     @include onDesktop {
       padding: 0;
