--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -5,6 +5,14 @@
   font-size: 14px;
   color: #0f0e08;
 
+  &__schedule {
+    margin-bottom: 20px;
+  }
+
+  &__contacts {
+    margin-bottom: 20px;
+  }
+
   &__links {
     display: flex;
     flex-direction: row;
@@ -33,9 +41,8 @@
   }
 
   &__button {
+    transform: translateX(220px);
     margin-bottom: 20px;
-    grid-column: 2;
-    justify-self: end;
     border-radius: 50%;
     width: 50px;
     height: 50px;
@@ -52,7 +59,6 @@
   &__hr {
     margin-bottom: 40px;
     color: rgba(26, 90, 76, 0.5);
-    width: 200%;
     border: 1px solid black;
 
     @include onDesktop {
