--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -2,7 +2,11 @@
 
   &__kostul {
     position: relative;
-    height: 80px;
+    height: 70px;
+
+    @include onDesktop {
+      height: 0;
+    }
   }
 
   &__place {
