--- a/src/styles/blocks/grid.scss
+++ b/src/styles/blocks/grid.scss
@@ -29,6 +29,11 @@
     }
   }
 
+  &--mobile {
+    display: grid;
+    
+  }
+
   &__item {
     @for $start from 1 through 16 {
       @for $end from $start through 16 {
