--- a/src/styles/blocks/logo.scss
+++ b/src/styles/blocks/logo.scss
@@ -9,6 +9,10 @@
   }
   
   &--footer {
-    padding-bottom: 63px;
+    padding-bottom: 40px;
+
+    @include onDesktop {
+      padding-bottom: 63px;
+    }
   }
 }
