--- a/src/styles/blocks/place.scss
+++ b/src/styles/blocks/place.scss
@@ -22,7 +22,11 @@
   &__photo {
 
     &--hidden {
-      width: 0;
+      display: none;
+
+      @include onDesktop {
+        display: block;
+      }
     }
     
     margin: 0 0 15px;
