--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -6,8 +6,9 @@
     width: 0;
 
     @include onDesktop {
-      width: fit-content;
+      width: 95.45%;
       height: 655px;
+      padding-left: 55px;
     }
   }
 
@@ -56,6 +57,10 @@
       grid-template-rows: 1fr 1fr;
       align-items: center;
       top: calc(655px - 140px);
+      transition: transform $duration;
+      &:hover {
+        transform: rotate(90deg);
+      }
     }
   }
 
