--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -6,6 +6,7 @@
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
+  transition: background-image $duration;
 
   &--menu {
     background-image: url(../images/menu.png);
