--- a/src/styles/blocks/logo.scss
+++ b/src/styles/blocks/logo.scss
@@ -5,6 +5,11 @@
     @include onDesktop {
       padding-top: 15px;
       height: 72px;
+      transition: transform $duration;
+      
+      &:hover {
+        transform: scale(1.2);
+      }
     }
   }
   
