--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -35,8 +35,10 @@
 
     color: #0f0e08;
 
+    transition: color $duration, transform $duration;
     &:hover {
-      border-color: #0f0e08;
+      transform: scale(1.2);
+      color: $hover-color;
     }
   }
 }
