--- a/src/styles/blocks/place.scss
+++ b/src/styles/blocks/place.scss
@@ -9,8 +9,9 @@
       padding-bottom: 0;
     }
 
+    transition: transform $duration;
     &:hover {
-      transform: scale(1.05);
+      transform: scale(1.03);
     }
   }
 
@@ -37,7 +38,8 @@
     &--main {
       @include onDesktop {
         height: 520px;
-        width: 870px;
+        width: 100%;
+        object-fit: contain;
       }
     }
 
@@ -55,7 +57,7 @@
     &--last-desktop {
       @include onDesktop {
         height: 678px;
-        width: 1920px;
+        width: 100%;
       }
     }
   }
