--- a/src/styles/blocks/substriction.scss
+++ b/src/styles/blocks/substriction.scss
@@ -8,13 +8,8 @@
         display: none;
       }
     }
-
-    @include onDesktop {
-      background-image: url("../images/footer/footer-1920.jpg");
-      width: 1920px;
-      height: 650px;
-    }
   }
+
   &__container {
     display: flex;
     flex-direction: column;
@@ -30,7 +25,8 @@
     
     @include onDesktop {
       background-image: url("../images/footer/footer-1920.jpg");
-      width: 1920px;
+      background-size: 100vw;
+      width: 100%;
       height: 650px;
     }
   }
@@ -63,6 +59,7 @@
 
     @include onDesktop {
       padding-top: 45px;
+      padding-left: 60px;
       margin: 0;
       line-height: 100%;
     }
