--- a/src/styles/blocks/container.scss
+++ b/src/styles/blocks/container.scss
@@ -1,6 +1,6 @@
 .container {
   margin: 0;
-  max-width: 1920px;
+  max-width: 100vw;
   padding: 0 20px;
 
   @include onDesktop {
@@ -15,7 +15,7 @@
     @include onDesktop {
       padding: 0;
       margin: 0;
-      max-width: fit-content;
+      max-width: 100vw;
     }
   }
 }
