--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -7,10 +7,22 @@
 
   &__schedule {
     margin-bottom: 20px;
+    transition: color $duration, transform $duration;
+
+    &:hover {
+      color: $hover-color;
+      transform: scale(1.2);
+    }
   }
 
   &__contacts {
     margin-bottom: 20px;
+    transition: color $duration, transform $duration;
+    
+    &:hover {
+      color: $hover-color;
+      transform: scale(1.2);
+    }
   }
 
   &__links {
@@ -34,6 +46,11 @@
     margin-right: 24px;
     height: 24px;
     width: 100%;
+    transition: transform $duration;
+    
+    &:hover {
+      transform: scale(1.2);
+    }
     
     &:nth-child(2n) {
       margin: 0;
