--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -10,6 +10,22 @@
 
   &__body {
     margin: 0;
+
+    overflow-x: hidden;
+  }
+
+  &__menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+
+    transform: translateY(-100%);
+    transition: transform $duration;
+
+    &:target {
+      transform: translateX(0);
+    }
   }
 
   &__section {
