--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,19 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import "./reset.scss";
+@import "./utils/variables";
+@import "./utils/extends";
+@import "./utils/mixins";
 
-body {
-  background: $c-gray;
-}
+@import "./blocks/page.scss";
+@import "./blocks/header.scss";
+@import "./blocks/namu.scss";
+@import "./blocks/art-museum.scss";
+@import "./blocks/art-museum-button.scss";
+@import "./blocks/actual-events.scss";
+@import "./blocks/grid.scss";
+@import "./blocks/events-description.scss";
+@import "./blocks/lecture.scss";
+@import "./blocks/gallery.scss";
+@import "./normalize.scss";
+@import "./blocks/subscribe.scss";
+@import "./blocks/nav.scss";
+@import "./blocks/footer.scss";
