--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,9 @@
-%h1 {
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
+%soc-media-img {
+  display: inline-block;
+
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+
+  transition: 0.3s;
 }
