--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,15 @@
 @import "fonts";
 @import "typography";
 
-body {
-  background: $c-gray;
-}
+@import "utils/reset.scss";
+
+@import "blocks/page.scss";
+@import "blocks/container.scss";
+@import "blocks/header.scss";
+@import "blocks/museum.scss";
+@import "blocks/events.scss";
+@import "blocks/gallery.scss";
+@import "blocks/subscription.scss";
+@import "blocks/contact.scss";
+@import "blocks/footer.scss";
+@import "blocks/menu.scss";
