--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -4,3 +4,64 @@
     #{$_property}: $_toValue;
   }
 }
+
+@mixin montserrat700 {
+  font-family: "Montserrat", sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  color: $logo-color;
+}
+
+@mixin montserrat400 {
+  font-family: "Montserrat", sans-serif;
+  font-style: normal;
+  font-weight: normal;
+}
+
+@mixin ibm700 {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-style: normal;
+  font-weight: bold;
+}
+
+@mixin ibm500 {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+}
+
+@mixin ibm400 {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-style: normal;
+  font-weight: normal;
+}
+
+@mixin ibm300 {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-style: normal;
+  font-weight: 300;
+}
+
+@mixin forIpad {
+  @media (min-width: 768px) {
+    @content;
+  }
+}
+
+@mixin forPC {
+  @media (min-width: 1280px) {
+    @content;
+  }
+}
+
+@mixin forDesktop {
+  @media (min-width: 1440px) {
+    @content;
+  }
+}
+
+@mixin forFull {
+  @media (min-width: 1920px) {
+    @content;
+  }
+}
