--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,7 @@
 $c-gray: #eee;
+$logo-color: #0f0e08;
+$section-margin: 100px;
+$padding-Ipad: 34px;
+$padding-PC: 55px;
+$padding-Desktop: 135px;
+$padding-full: 175px;
