--- a/src/styles/blocks/museum.scss
+++ b/src/styles/blocks/museum.scss
@@ -1,4 +1,5 @@
 .museum {
+  position: relative;
   margin-bottom: 70px;
 
   @include forIpad {
@@ -137,7 +138,7 @@
   &__event {
     display: none;
     position: absolute;
-    bottom: 0;
+    bottom: 80px;
 
     transform: rotate(-90deg);
 
@@ -161,16 +162,13 @@
     @include forPC {
       display: block;
       left: $padding-PC;
-      bottom: 60px;
     }
 
     @include forDesktop {
       left: $padding-Desktop;
-      bottom: 70px;
     }
 
     @include forFull {
-      bottom: 80px;
       left: $padding-full;
     }
   }
