one more solution

--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -4,6 +4,7 @@
   &__images {
     display: flex;
     flex-wrap: wrap;
+    gap: 10px;
 
     @include forIpad {
       gap: 20px;
@@ -15,6 +16,7 @@
     }
 
     &--img {
+      flex: 1 0 calc(90% - 15px);
       width: 280px;
       height: 410px;
       object-fit: cover;
@@ -22,6 +24,7 @@
       transition: all 0.3s;
 
       @include forIpad {
+        flex: 1 0 calc(45% - 15px);
         width: 340px;
         height: 543px;
       }
