--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -27,6 +27,10 @@
   color: #fff;
   background-color: #1a5a4c;
 
+  @include forPC {
+    height: 30vh;
+  }
+
   &__page {
     position: fixed;
     top: 0;
@@ -52,6 +56,18 @@
       line-height: 100%;
       color: #fff;
       text-decoration: none;
+    }
+
+    &--list {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding-top: 30px;
+
+      @include forPC {
+        flex-direction: row;
+        justify-content: space-between;
+      }
     }
   }
 }
