--- a/src/styles/blocks/contact.scss
+++ b/src/styles/blocks/contact.scss
@@ -86,6 +86,7 @@
     font-size: 14px;
     line-height: 150%;
     color: #0f0e08;
+    text-decoration: none;
   }
 
   &__grafic {
@@ -101,12 +102,12 @@
 
     &--work {
       @include forIpad {
-        max-width: 160px;
+        min-width: 160px;
         margin-right: 80px;
       }
 
       @include forPC {
-        max-width: 170px;
+        min-width: 170px;
         margin-right: 30px;
       }
 
@@ -117,6 +118,7 @@
 
     &--contact {
       @include forPC {
+        min-width: 176px;
         margin-right: 60px;
       }
 
@@ -134,9 +136,11 @@
     border-top: 1px solid rgba(26,90,76, 0.5);
 
     @include forIpad {
-      width: 160px;
+      justify-content: space-between;
+      min-width: 160px;
       gap: 0;
       padding-top: 50px;
+      padding-right: 100px;
     }
 
     @include forPC {
@@ -144,6 +148,7 @@
       border-left: 1px solid rgba(26,90,76, 0.5);
       padding-top: 0;
       padding-left: 64px;
+      padding-right: 0;
     }
 
     @include forFull {
