made a header, menu and promo page

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,12 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import "./utils/vars";
+@import "./utils/mixins";
+@import "./utils/normalize";
 
-body {
-  background: $c-gray;
-}
+@import "./blocks/container";
+@import "./blocks/logo";
+@import "./blocks/header";
+@import "./blocks/nav";
+
+@import "./blocks/main-page";
+@import "./blocks/promo";
+@import "./blocks/main-title.scss";
