--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,23 @@
-$c-gray: #eee;
+$breakPointMobile: 320px;
+$breakPointTablet: 768px;
+$breakPointDesktop: 1280px;
+$breakPointDesktopL: 1920px;
+
+$logoHeightMobile: 61px;
+$logoHeightTablet: 72px;
+
+$logoWidthMobile: 55px;
+$logoWidthTablet: 68px;
+$duration: 300ms;
+
+$mainBgColor: #e5e5e5;
+$darkColor: #0f0e08;
+$greyColor: #687480;
+$greenColor: #1a5a4c;
+$navHoverColor: #ffffff28;
+$darkGrey: #4e4e4e;
+$whiteColor: #fff;
+$redColor: #f14a27;
+$lightRedColor: #ff5b3a;
+$blackColor: #000;
+$fontMontserrat: "Montserrat", "Arial", "Helvetica", sans-serif;
