added a section with current information

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,7 +6,8 @@
 @import "./blocks/logo";
 @import "./blocks/header";
 @import "./blocks/nav";
-
 @import "./blocks/main-page";
 @import "./blocks/promo";
 @import "./blocks/main-title.scss";
+@import "./blocks/events";
+@import "./blocks/event";
