--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,3 +12,5 @@
 @import "./blocks/events";
 @import "./blocks/event";
 @import "./blocks/gallery";
+@import "./blocks/subscription";
+@import "./blocks/form";
