--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,3 +14,7 @@
 @import "./blocks/gallery";
 @import "./blocks/subscription";
 @import "./blocks/form";
+@import "./blocks/footer";
+@import "./blocks/social";
+@import "./blocks/info";
+@import "./blocks/copyright";
