--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -1,6 +1,64 @@
-@mixin hover($_property, $_toValue) {
-  transition: #{$_property} 0.3s;
-  &:hover {
-    #{$_property}: $_toValue;
+@mixin onTablet {
+  @media (min-width: 768px) {
+    @content;
+  }
+}
+
+@mixin onLaptop {
+  @media (min-width: 1024px) {
+    @content;
+  }
+}
+
+@mixin onDesktop {
+  @media (min-width: 1440px) {
+    @content;
+  }
+}
+
+@mixin onFullHd {
+  @media (min-width: 1920px) {
+    @content;
+  }
+}
+
+@mixin grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 0 20px;
+
+  @include onTablet {
+    grid-template-columns: repeat(6, 1fr);
+  }
+
+  @include onLaptop {
+    grid-template-columns: repeat(12, 1fr);
+    gap: 0 30px;
+  }
+
+  @include onFullHd {
+    grid-template-columns: repeat(16, 1fr);
+  }
+}
+
+@mixin container {
+  padding-left: 20px;
+  padding-right: 20px;
+
+  @include onTablet {
+    padding-left: 34px;
+    padding-right: 34px;
+  }
+
+  @include onLaptop {
+    padding-left: 55px;
+    padding-right: 55px;
+    max-width: 1280px;
+    margin-right: auto;
+    margin-left: auto;
+  }
+
+  @include onFullHd {
+    max-width: 1680px;
   }
 }
