--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,14 @@
-$c-gray: #eee;
+$color-green: #1a5a4c;
+$color-dark-green: #15483d;
+$color-light-green: #2A8470;
+$color-white: #fff;
+$color-red: #f14a27;
+$color-dark-red: #cf3a1b;
+$color-black: #0F0E08;
+$color-gray: #4e4e4e;
+$color-medium-gray: #687480;
+$color-light-gray: #e0e0e0;
+
+$container-paddings-desk: 55px;
+
+$duration: 0.3s;
