--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -187,11 +187,12 @@
       width: 100%;
     }
   }
+
   &__card-container {
     @include container;
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translateY(-50%);
+
+    
 
     @include onLaptop {
       @include grid;
