--- a/src/styles/blocks/main-title.scss
+++ b/src/styles/blocks/main-title.scss
@@ -27,7 +27,7 @@
   &__part {
     @include onTablet {
       color: transparent;
-      -webkit-text-stroke: 2px #000;
+      -webkit-text-stroke: 2px $blackColor;
     }
   }
 }
