--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -1,5 +1,5 @@
 .nav {
-  background-color: #fff;
+  background-color: $whiteColor;
   width: 100%;
   padding-top: 30px;
   padding-bottom: 30px;
@@ -51,7 +51,7 @@
     text-align: center;
 
     &:hover {
-      background-color: #fff;
+      background-color: $whiteColor;
     }
   }
 
