--- a/src/styles/blocks/promo.scss
+++ b/src/styles/blocks/promo.scss
@@ -91,7 +91,7 @@
     border: 1px solid $greenColor;
     position: relative;
     background-color: $whiteColor;
-    transition: background-color 500ms, color 500ms;
+    transition: background-color $durationLonger, color $durationLonger;
 
     &:hover {
       background-color: $greenColor;
