--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -9,6 +9,7 @@ $logoHeightTablet: 72px;
 $logoWidthMobile: 55px;
 $logoWidthTablet: 68px;
 $duration: 300ms;
+$durationLonger: 500ms;
 
 $mainBgColor: #e5e5e5;
 $darkColor: #0f0e08;
