--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -9,49 +9,62 @@
     position: relative;
 
     @include onLaptop {
-     @include grid;
-     align-content: center;
-     margin-top: 42px;
+      margin-top: 40px;
+    }
+  }
+
+  &__icon {
+    display: block;
+    width: 24px;
+    height: 24px;
+    background: url(../images/cross-icon.svg) no-repeat;
+    margin-bottom: 20px;
+
+    @include onTablet {
+      margin-bottom: 80px;
+    }
+
+    @include onFullHd {
+      margin-bottom: 120px;
+    }
+
+    &:hover {
+      background-image: url(../images/cross-icon-hover.svg);
+    }
+  }
+
+  &__nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    flex-direction: row-reverse;
+
+    @include onTablet {
+      flex-direction: row;
+      justify-content: center;
+      align-items: start;
     }
   }
 
   &__logo {
     display: block;
-    margin-bottom: 50px;
     width: max-content;
 
-    @include onLaptop {
-      margin-bottom: 0;
-      grid-column: 2 / 4;
-    }
-  }
-
-  &__icon {
-    position: absolute;
-    right: 20px;
-    display: block;
-    width: 24px;
-    height: 24px;
-    background: url(../images/cross-icon.svg) no-repeat;
-
-    &:hover {
-      background-image: url(../images/cross-icon-hover.svg);
+    @include onTablet {
+      margin-right: 100px;
     }
 
     @include onLaptop {
-      left: 55px;
+      margin-right: 120px;
     }
   }
 
   &__list {
-    @include onLaptop {
-      grid-column: 4 / 11;
+    @include onTablet {
       display: grid;
-      grid-template-columns: repeat(4, 1fr);
-      grid-template-columns: 1 / 3;
-      grid-auto-flow: dense;
+      grid-template-columns: repeat(2, 1fr);
+      gap: 0 30px;
     }
-
   }
 
   &__item {
@@ -59,22 +72,19 @@
     transition: color $duration;
 
     @include onTablet {
-      margin-bottom: 15px;
+      margin-bottom: 20px;
       font-size: 24px;
+      line-height: 24px;
     }
 
-    &:nth-of-type(-n+4) {
-
-      @include onLaptop {
-        grid-column: 1 / 3;
-      }
+    @include onLaptop {
+      margin-bottom: 30px;
+      font-size: 28px;
+      line-height: 28px;
     }
 
-    &:nth-of-type(n+5) {
-
-      @include onLaptop {
-        grid-column:43 / 4;
-      }
+    &:last-child {
+      margin-bottom: 0;
     }
 
     &:hover {
