--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -28,6 +28,13 @@
   &__list {
     margin-top: 20px;
     margin-left: 20px;
+    
+    @media (max-height: 500px) {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      gap: 0 30px;
+      width: 100%;
+    }
 
     @include onDesktop {
       grid-template-columns: repeat(8, auto);
