--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,16 @@
 @import "fonts";
 @import "typography";
 
-body {
-  background: $c-gray;
-}
+@import "blocks/general.scss";
+@import "blocks/header.scss";
+@import "blocks/button.scss";
+@import "blocks/container.scss";
+@import "blocks/events.scss";
+@import "blocks/body.scss";
+@import "blocks/flex.scss";
+@import "blocks/gallery.scss";
+@import "blocks/titles.scss";
+@import "blocks/subscription.scss";
+@import "blocks/footer.scss";
+@import "blocks/menu.scss";
+@import "blocks/tickets.scss";
