--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -4,3 +4,31 @@
     #{$_property}: $_toValue;
   }
 }
+
+@mixin buttonColor($toValue) {
+  color: $toValue;
+}
+
+@mixin onSmallTablet {
+  @media (min-width: 440px) {
+    @content;
+  }
+}
+
+@mixin onBigTablet {
+  @media (min-width: 740px) {
+    @content;
+  }
+}
+
+@mixin onDesktop {
+  @media (min-width: 1280px) {
+    @content;
+  }
+}
+
+@mixin onLargeScreen {
+  @media (min-width: 1920px) {
+    @content;
+  }
+}
