--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,11 @@
-$c-gray: #eee;
+$c-white: #fff;
+$colorGreen: #1a5a4c;
+$colorRed: #f14a27;
+$colorTitle: #000;
+$colorText: #4e4e4e;
+$colorSubTitle: #0f0e08;
+$colorEvents: #687480;
+$colorDots: #e0e0e0;
+
+$ibmFont: "IBM Plex Sans", sans-serif;
+$monserratFont: "Montserrat", sans-serif;
